# KinematicsNode

./: .gitmodules  CMakeLists.txt  README.md
src/: CatixKinematics.cpp  CatixKinematics.h  SimulationWindow.cpp  SimulationWindow.h  main.cpp  simulationwindow.ui
src/limb/: Leg2Dof.cpp  Leg2Dof.h  Limb2DofInterface.h  LimbSegment.h  PolarCoordinates.h
src/platform/: Platform8Dof.cpp  Platform8Dof.h  PlatformInterface.h  PlatformParameters.h
src/servo/: ServoInterface.h  ServoPublisher.cpp  ServoPublisher.h
